@@ -1,5 +1,0 @@
-# no backup files, editor temp
-*~
-\#*
-*.bak
-.idea/
