@@ -1,66 +1,0 @@
--
-  id: 1
-  quote: "Life isn't about finding yourself. Life is about creating yourself."
-  author: "George Bernard Shaw"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 2
-  quote: "The most important thing is to enjoy your life - to be happy - it's all that matters."
-  author: "Audrey Hepburn"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 3
-  quote: "I have found that if you love life, life will love you back."
-  author: "Arthur Rubinstein"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 4
-  quote: "Life is really simple, but we insist on making it complicated. "
-  author: "Confucius"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 5
-  quote: "In the end, it's not the years in your life that count. It's the life in your years."
-  author: "Abraham Lincoln"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 6
-  quote: "We all have two lives. The second one starts when we realize we only have one."
-  author: "Tom Hiddleston"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 7
-  quote: "You get in life what you have the courage to ask for."
-  author: "Oprah Winfrey"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 8
-  quote: "Only a life lived for others is a life worthwhile."
-  author: "Albert Einstein"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 9
-  quote: "Once you say you're going to settle for second, that's what happens to you in life."
-  author: "John F. Kennedy"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 10
-  quote: "There is no passion to be found playing small--in settling for a life that is less than the one you are capable of living."
-  author: "Nelson Mandela"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
--
-  id: 11
-  quote: "Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays young. The greatest thing in life is to keep your mind young."
-  author: "Henry Ford"
-  quote_status: 1
-  create_date: "2017-06-24 03:21:03"
