@@ -1,3 +1,7 @@
+<h5>1.09 RC1</h5>  [WORK IN PROGRESS - NOT RELEASED]  Dev: XOOPS 2.5.10, PHP 7.3.1
+<hr>
+ - moved to RC1 (goffy)
+ 
 <h5>1.09 Beta1</h5>  [WORK IN PROGRESS - NOT RELEASED]  Dev: XOOPS 2.5.9, PHP 7.3.1
 <hr>
  - added preferences for default album image size (goffy)
